--- a/install.mdx
+++ b/install.mdx
@@ -3,34 +3,65 @@ title: "How To Install Ghost"
 sidebarTitle: "Installation"
 description: The fastest way to get started is to set up a site on **Ghost(Pro)**. If you're running a self-hosted instance, we strongly recommend an Ubuntu server with at least 1GB of memory to run Ghost.
 ---
+import { CardCenteredContent } from '/snippets/card-centered-content.jsx';
 
 ***
 
-<CardGroup cols={3}>
-  <Card title="Ubuntu" img="/images/68d12c6e-ubuntu-logo.svg" href="/install/ubuntu/" >
-    16.04, 18.04, 20.04, 22.04 LTS
-  </Card>
-  <Card title="Docker" img="/images/4cf2b2dd-docker-logo.svg" href="/install/docker/" >
-    Community image
-  </Card>
-  <Card title="Local install" img="/images/2bef395e-local_hufd41d0e39e6a56af2fade6d8e93ee88b_4742_432x0_resize_q100_h2_box_3.webp" href="/install/local/" >
-    MacOS, Windows & Linux
-  </Card>
-  <Card title="Install from source" img="/images/10a9ccc0-source.svg" href="/install/source/" >
-    For working on Ghost Core
-  </Card>
+<CardGroup cols={2}>
+  <CardCenteredContent
+    title="Ubuntu"
+    href="/install/ubuntu/"
+    description="16.04, 18.04, 20.04, 22.04 LTS"
+    src="/images/68d12c6e-ubuntu-logo.svg"
+    alt="Ubuntu logo"
+  />
+  <CardCenteredContent
+    title="Docker"
+    href="/install/docker/"
+    description="Community image"
+    src="/images/4cf2b2dd-docker-logo.svg"
+    alt="Docker logo"
+  />
+  <CardCenteredContent
+    title="Local install"
+    href="/install/local/"
+    description="MacOS, Windows & Linux"
+    src="/images/2bef395e-local_hufd41d0e39e6a56af2fade6d8e93ee88b_4742_432x0_resize_q100_h2_box_3.webp"
+    alt="Local install logo"
+  />
+  <CardCenteredContent
+    title="Install from source"
+    href="/install/source/"
+    description="For working on Ghost Core"
+    src="/images/10a9ccc0-source.svg"
+    alt="Source code logo"
+  />
+
+
 </CardGroup>
 
 ## Cloud hosting
 
 <CardGroup cols={3}>
-  <Card title="Ghost(Pro)" img="/images/8e9b8c2f-pro-logo.svg" href="https://ghost.org/pricing/" >
-    Official managed hosting
-  </Card>
-  <Card title="Digital Ocean" img="/images/b5a6f6ec-digitalocean-logo.svg" href="/install/digitalocean/" >
-    Pre-built VPS image
-  </Card>
-  <Card title="Linode" img="/images/73849ab7-linode-logo.svg" href="/install/linode/" >
-    Virtual private servers
-  </Card>
+  <CardCenteredContent
+    title="Ghost(Pro)"
+    href="https://ghost.org/pricing/"
+    description="Official managed hosting"
+    src="/images/8e9b8c2f-pro-logo.svg"
+    alt="Ghost(Pro) logo"
+  />
+  <CardCenteredContent
+    title="Digital Ocean"
+    href="/install/digitalocean/"
+    description="Pre-built VPS image"
+    src="/images/b5a6f6ec-digitalocean-logo.svg"
+    alt="Digital Ocean logo"
+  />
+  <CardCenteredContent
+    title="Linode"
+    href="/install/linode/"
+    description="Virtual private servers"
+    src="/images/73849ab7-linode-logo.svg"
+    alt="Linode logo"
+  />
 </CardGroup>
