--- a/faq/major-versions-lts.mdx
+++ b/faq/major-versions-lts.mdx
@@ -12,7 +12,8 @@ description: Major version release dates and end of life support for Ghost.
 | Ghost 2.x           | 2018     | Jan 2021    |
 | Ghost 3.x           | 2019     | Jan 2022    |
 | Ghost 4.x           | 2021     | Jan 2023    |
-| Ghost 5.x (Current) | 2022     | TBC         |
+| Ghost 5.x           | 2022     | TBC         |
+| Ghost 6.x (Current) | 2025     | TBC         |
 
 At any one time the current major version of Ghost is under active development, whilst the previous version is maintained as the Long Term Support version (LTS).
 
