fixed homepage spacing

--- a/index.mdx
+++ b/index.mdx
@@ -8,7 +8,7 @@ description: Learn how to build and develop beautiful, independent publications
 <section className='max-w-[100dvw] h-full px-20 py-4 text-black dark:text-white'> 
 # Getting Started with Ghost
 
-Learn how to build and develop beautiful, independent publications
+<p>Learn how to build and develop beautiful, independent publications</p>
 
 <br />
 
@@ -18,7 +18,7 @@ Learn how to build and develop beautiful, independent publications
 <div className='md:w-1/2'>
 <h2 className='text-2xl font-bold'>Developer install guide</h2>
 <br />
-Follow our setup guides for any platform, from local development to production environments.
+<p>Follow our setup guides for any platform, from local development to production environments.</p>
 <br />
 <a href="install/" className='p-2 border rounded-md bg-black text-white'>Get Started →</a>
 <br />
