--- a/jamstack.mdx
+++ b/jamstack.mdx
@@ -10,61 +10,53 @@ import { CardCenteredContent } from '/snippets/card-centered-content.jsx';
 Ghost ships with a default front-end theme layer built with Handlebars, but based on its flexible [architecture](/architecture/) it also be used** **as a headless CMS with third party front-end frameworks. We have setup guides for most of the most popular frameworks and how to use Ghost with them.
 
 <CardGroup cols={3}>
-  <CardCenteredContent
-    src="/images/9994e9a8-nextjs-logo.svg"
+  <Card
+    title="Next.js"
     href="/jamstack/next/"
-    title="Working With Next.js"
+    icon="/images/9994e9a8-nextjs-logo.svg"
     alt="Next.js logo"
-    hideTitle={true}
   />
-  <CardCenteredContent
-    src="/images/cf116fbd-gatsby-logo.svg"
+  <Card
+    title="Gatsby"
     href="/jamstack/gatsby/"
-    title="Working With Gatsby"
+    icon="/images/cf116fbd-gatsby-logo.svg"
     alt="Gatsby logo"
-    hideTitle={true}
   />
-  <CardCenteredContent
-    src="/images/475cf82c-hexo-logo.svg"
+  <Card
+    title="Hexo"
     href="/jamstack/hexo/"
-    title="Working With Hexo"
+    icon="/images/475cf82c-hexo-logo.svg"
     alt="Hexo logo"
-    hideTitle={true}
   />
-  <CardCenteredContent
-    src="/images/nuxt-logo-green-black.svg"
+  <Card
+    title="Nuxt.js"
     href="/jamstack/nuxt/"
-    title="Working With Nuxt.js"
+    icon="/images/nuxt-logo-green-black.svg"
     alt="Nuxt.js logo"
-    hideTitle={true}
   />
-  <CardCenteredContent
-    src="/images/vuepress-logo.png"
+  <Card
+    title="VuePress"
     href="/jamstack/vuepress/"
-    title="Working With VuePress"
+    icon="/images/vuepress-logo.png"
     alt="VuePress logo"
-    hideTitle={true}
   />
-  <CardCenteredContent
-    src="/images/fff9bebe-gridsome-logo.svg"
+  <Card
+    title="Gridsome"
     href="/jamstack/gridsome/"
-    title="Working With Gridsome"
+    icon="/images/fff9bebe-gridsome-logo.svg"
     alt="Gridsome logo"
-    hideTitle={true}
   />
-  <CardCenteredContent
-    src="/images/0d290655-eleventy-logo.svg"
+  <Card
+    title="Eleventy"
     href="/jamstack/eleventy/"
-    title="Working With Eleventy"
+    icon="/images/0d290655-eleventy-logo.svg"
     alt="Eleventy logo"
-    hideTitle={true}
   />
-  <CardCenteredContent
-    src="/images/2abd65c9-custom.svg"
+  <Card
+    title="Custom Frontend"
     href="/jamstack/custom/"
-    title="Building A Custom Front End For Ghost"
+    icon="/images/2abd65c9-custom.svg"
     alt="The word 'custom' in brackets"
-    hideTitle={true}
   />
 </CardGroup>
 
