--- a/install.mdx
+++ b/install.mdx
@@ -49,6 +49,9 @@ import { CardCenteredContent } from '/snippets/card-centered-content.jsx';
     src="images/68d12c6e-ubuntu-logo.svg"
     alt="Ubuntu logo"
   />
+  <Card title="Ubuntu" img="/images/68d12c6e-ubuntu-logo.svg" href="/install/ubuntu/" >
+    16.04, 18.04, 20.04, 22.04 LTS
+  </Card>
 </CardGroup>
 
 ## Cloud hosting
