try different image paths

--- a/install.mdx
+++ b/install.mdx
@@ -19,7 +19,7 @@ import { CardCenteredContent } from '/snippets/card-centered-content.jsx';
   <Card
     title="Docker"
     href="/install/docker/"
-    icon="/images/4cf2b2dd-docker-logo.svg"
+    icon="images/4cf2b2dd-docker-logo.svg"
     alt="Docker logo"
   >
     Community image
@@ -27,7 +27,7 @@ import { CardCenteredContent } from '/snippets/card-centered-content.jsx';
   <Card
     title="Local install"
     href="/install/local/"
-    icon="/images/2bef395e-local_hufd41d0e39e6a56af2fade6d8e93ee88b_4742_432x0_resize_q100_h2_box_3.webp"
+    icon="../images/2bef395e-local_hufd41d0e39e6a56af2fade6d8e93ee88b_4742_432x0_resize_q100_h2_box_3.webp"
     alt="Local install logo"
   >
     MacOS, Windows & Linux
@@ -35,7 +35,7 @@ import { CardCenteredContent } from '/snippets/card-centered-content.jsx';
   <Card
     title="Install from source"
     href="/install/source/"
-    icon="/images/10a9ccc0-source.svg"
+    icon="./images/10a9ccc0-source.svg"
     alt="Source code logo"
   >
     For working on Ghost Core
@@ -46,7 +46,7 @@ import { CardCenteredContent } from '/snippets/card-centered-content.jsx';
     title="Ubuntu"
     href="/install/ubuntu/"
     description="16.04, 18.04, 20.04, 22.04 LTS"
-    src="images/68d12c6e-ubuntu-logo.svg"
+    src="../images/68d12c6e-ubuntu-logo.svg"
     alt="Ubuntu logo"
   />
   <Card title="Ubuntu" img="/images/68d12c6e-ubuntu-logo.svg" href="/install/ubuntu/" >
