try absolute routes

--- a/install.mdx
+++ b/install.mdx
@@ -28,7 +28,7 @@ import { DockerLogo } from '/snippets/logos/docker.jsx';
   <Card
     title="Local install"
     href="/install/local/"
-    icon="../images/2bef395e-local_hufd41d0e39e6a56af2fade6d8e93ee88b_4742_432x0_resize_q100_h2_box_3.webp"
+    icon="https://mintlify.s3.us-west-1.amazonaws.com/ghost/images/2bef395e-local_hufd41d0e39e6a56af2fade6d8e93ee88b_4742_432x0_resize_q100_h2_box_3.webp"
     alt="Local install logo"
   >
     MacOS, Windows & Linux
@@ -47,7 +47,7 @@ import { DockerLogo } from '/snippets/logos/docker.jsx';
     title="Ubuntu"
     href="/install/ubuntu/"
     description="16.04, 18.04, 20.04, 22.04 LTS"
-    src="/images/68d12c6e-ubuntu-logo.svg"
+    src="https://mintlify.s3.us-west-1.amazonaws.com/ghost/images/68d12c6e-ubuntu-logo.svg"
     alt="Ubuntu logo"
   />
   <Card title="Ubuntu" img="/images/68d12c6e-ubuntu-logo.svg" href="/install/ubuntu/" >
