updated vuepress and custom frontend logos

--- a/jamstack.mdx
+++ b/jamstack.mdx
@@ -39,7 +39,7 @@ Ghost ships with a default front-end theme layer built with Handlebars, but base
   <Card
     title="VuePress"
     href="/jamstack/vuepress/"
-    icon="/images/vuepress-logo.png"
+    icon="https://mintlify.s3.us-west-1.amazonaws.com/ghost/images/vuepress-logo.png"
   />
   <Card
     title="Gridsome"
@@ -54,7 +54,7 @@ Ghost ships with a default front-end theme layer built with Handlebars, but base
   <Card
     title="Custom Frontend"
     href="/jamstack/custom/"
-    icon="/images/2abd65c9-custom.svg"
+    icon="sparkles"
   />
 </CardGroup>
 
