updated eleventy, temp hide vuepress

--- a/jamstack.mdx
+++ b/jamstack.mdx
@@ -36,11 +36,11 @@ Ghost ships with a default front-end theme layer built with Handlebars, but base
     href="/jamstack/nuxt/"
     icon={<NuxtLogo />}
   />
-  <Card
+  {/* <Card
     title="VuePress"
     href="/jamstack/vuepress/"
     icon="https://mintlify.s3.us-west-1.amazonaws.com/ghost/images/vuepress-logo.png"
-  />
+  /> */}
   <Card
     title="Gridsome"
     href="/jamstack/gridsome/"
