put back vuepress, remove unused import

--- a/jamstack.mdx
+++ b/jamstack.mdx
@@ -3,7 +3,6 @@ title: "Ghost On The JAMstack"
 sidebarTitle: "JAMstack"
 description: How to use Ghost as a headless CMS with popular static site generators
 ---
-import { CardCenteredContent } from '/snippets/card-centered-content.jsx';
 import { NuxtLogo } from '/snippets/logos/nuxt.jsx';
 import { GatsbyLogo } from '/snippets/logos/gatsby.jsx';
 import { NextLogo } from '/snippets/logos/next.jsx';
@@ -36,11 +35,11 @@ Ghost ships with a default front-end theme layer built with Handlebars, but base
     href="/jamstack/nuxt/"
     icon={<NuxtLogo />}
   />
-  {/* <Card
+  <Card
     title="VuePress"
     href="/jamstack/vuepress/"
     icon="https://mintlify.s3.us-west-1.amazonaws.com/ghost/images/vuepress-logo.png"
-  /> */}
+  />
   <Card
     title="Gridsome"
     href="/jamstack/gridsome/"
