try snippets at top snippet level

--- a/install.mdx
+++ b/install.mdx
@@ -3,14 +3,13 @@ title: "How To Install Ghost"
 sidebarTitle: "Installation"
 description: The fastest way to get started is to set up a site on **Ghost(Pro)**. If you're running a self-hosted instance, we strongly recommend an Ubuntu server with at least 1GB of memory to run Ghost.
 ---
-import { CardCenteredContent } from '/snippets/card-centered-content.jsx';
-import { DockerLogo } from '/snippets/logos/docker.jsx';
-import { UbuntuLogo } from '/snippets/logos/ubuntu.jsx';
-import { SourceLogo } from '/snippets/logos/source.jsx';
-import { GhostProLogo } from '/snippets/logos/ghostpro.jsx';
-import { DigitalOceanLogo } from '/snippets/logos/digitalocean.jsx';
-import { LinodeLogo } from '/snippets/logos/linode.jsx';
-import { LocalInstallLogo } from '/snippets/logos/local.jsx';
+import { DockerLogo } from '/snippets/docker.jsx';
+import { UbuntuLogo } from '/snippets/ubuntu.jsx';
+import { SourceLogo } from '/snippets/source.jsx';
+import { GhostProLogo } from '/snippets/ghostpro.jsx';
+import { DigitalOceanLogo } from '/snippets/digitalocean.jsx';
+import { LinodeLogo } from '/snippets/linode.jsx';
+import { LocalInstallLogo } from '/snippets/local.jsx';
 
 ***
 
