--- a/jamstack.mdx
+++ b/jamstack.mdx
@@ -3,11 +3,11 @@ title: "Ghost On The JAMstack"
 sidebarTitle: "JAMstack"
 description: How to use Ghost as a headless CMS with popular static site generators
 ---
-import { NuxtLogo } from '/snippets/logos/nuxt.jsx';
-import { NextLogo } from '/snippets/logos/next.jsx';
-import { GridsomeLogo } from '/snippets/logos/gridsome.jsx';
-import { EleventyLogo } from '/snippets/logos/eleventy.jsx';
-import { HexoLogo } from '/snippets/logos/hexo.jsx';
+import { NuxtLogo } from '/snippets/nuxt.jsx';
+import { NextLogo } from '/snippets/next.jsx';
+import { GridsomeLogo } from '/snippets/gridsome.jsx';
+import { EleventyLogo } from '/snippets/eleventy.jsx';
+import { HexoLogo } from '/snippets/hexo.jsx';
 
 ***
 
