add gatsby back

--- a/jamstack.mdx
+++ b/jamstack.mdx
@@ -5,6 +5,7 @@ description: How to use Ghost as a headless CMS with popular static site generat
 ---
 import { NuxtLogo } from '/snippets/nuxt.jsx';
 import { NextLogo } from '/snippets/next.jsx';
+import { GatsbyLogo } from '/snippets/gatsby.jsx';
 import { GridsomeLogo } from '/snippets/gridsome.jsx';
 import { EleventyLogo } from '/snippets/eleventy.jsx';
 import { HexoLogo } from '/snippets/hexo.jsx';
@@ -18,6 +19,11 @@ Ghost ships with a default front-end theme layer built with Handlebars, but base
     title="Next.js"
     href="/jamstack/next/"
     icon={<NextLogo />}
+  />
+  <Card
+    title="Gatsby"
+    href="/jamstack/gatsby/"
+    icon={<GatsbyLogo />}
   />
   <Card
     title="Hexo"
