try gatsby logo without props

--- a/jamstack.mdx
+++ b/jamstack.mdx
@@ -3,6 +3,7 @@ title: "Ghost On The JAMstack"
 sidebarTitle: "JAMstack"
 description: How to use Ghost as a headless CMS with popular static site generators
 ---
+import { GatsbyLogo } from '/snippets/gatsby.jsx';
 
 ***
 
@@ -16,6 +17,7 @@ Ghost ships with a default front-end theme layer built with Handlebars, but base
   <Card
     title="Gatsby"
     href="/jamstack/gatsby/"
+    icon={<GatsbyLogo />}
   />
   <Card
     title="Hexo"
