--- a/index.mdx
+++ b/index.mdx
@@ -5,7 +5,7 @@ sidebarTitle: "Overview"
 description: Learn how to build and develop beautiful, independent publications
 ---
 
-<section className='max-w-[100dvw] h-full px-20 py-4 text-black dark:text-white'> 
+<section className='max-w-8xl mx-auto h-full px-4 lg:px-12 py-4 text-black dark:text-white'>
 # Getting Started with Ghost
 
 <p>Learn how to build and develop beautiful, independent publications</p>
