Removed all mentions of limit=all
- This is a first pass to ensure we don't mention limit=all throughout the docs
- There's definitely some more work to do here
- E.g. we should show examples of how to correctly iterate to get more than 100 items

--- a/admin-api/newsletters/overview.mdx
+++ b/admin-api/newsletters/overview.mdx
@@ -7,7 +7,7 @@ Newsletters allow finer control over distribution of site content via email, all
 ### The newsletter object
 
 ```json
-// GET admin/newsletters/?limit=all
+// GET admin/newsletters/?limit=50
 {
     "newsletters": [
         {
@@ -40,7 +40,7 @@ Newsletters allow finer control over distribution of site content via email, all
     "meta": {
         "pagination": {
             "page": 1,
-            "limit": "all",
+            "limit": 50,
             "pages": 1,
             "total": 1,
             "next": null,
