--- a/content-api/parameters.mdx
+++ b/content-api/parameters.mdx
@@ -74,8 +74,8 @@ The possibilities are extensive! Query strings are explained in detail in the [f
 
 By default, only 15 records are returned at once.
 
-* `&limit=5` would return only 5 records.
-* `&limit=all` will return all records - use carefully!
+* `&limit=5` would return only 5 records
+* `&limit=100` will return 100 records (max)
 
 ### Page
 
