--- a/changes.mdx
+++ b/changes.mdx
@@ -63,7 +63,7 @@ The syntax used to build custom membership flows has changed significantly.
 
 ```handlebars
 {{! Fetch all available tiers }}
-{{#get "tiers" limit="all" include="monthly_price,yearly_price,benefits"}}
+{{#get "tiers" include="monthly_price,yearly_price,benefits" limit="100"}}
   {{#foreach tiers}}
     <div>
       <h2>{{name}}</h2> {{! Output tier name }}
