--- a/jamstack/next.mdx
+++ b/jamstack/next.mdx
@@ -85,7 +85,7 @@ The [`posts.browse()`](/content-api/javascript/#endpoints) endpoint can be used 
 export async function getPosts() {
   return await api.posts
     .browse({
-      limit: "all"
+      limit: 100
     })
     .catch(err => {
       console.error(err);
@@ -245,7 +245,7 @@ Pages can be generated in the [same fashion as posts](/jamstack/next/#exposing-c
 export async function getPages() {
   return await api.pages
     .browse({
-      limit: "all"
+      limit: 100
     })
     .catch(err => {
       console.error(err);
@@ -262,7 +262,7 @@ export async function getPosts() {
   return await api.posts
     .browse({
       include: "tags,authors",
-      limit: "all"
+      limit: 100
     })
     .catch(err => {
       console.error(err);
