--- a/themes/helpers/data/price.mdx
+++ b/themes/helpers/data/price.mdx
@@ -46,7 +46,7 @@ Passing a `currency` without a price will output the symbol for that currency:
 Outputting prices for all tiers.
 
 ```handlebars
-{{#get "tiers" include="monthly_price,yearly_price,benefits" limit="all" as |tiers|}}
+{{#get "tiers" include="monthly_price,yearly_price,benefits" limit="100" as |tiers|}}
     {{! Loop through our tiers collection }}
     {{#foreach tiers}}
         {{#if monthly_price}}
