--- a/themes/helpers/data/tiers.mdx
+++ b/themes/helpers/data/tiers.mdx
@@ -69,7 +69,7 @@ Change the term “tier” with a custom suffix.
 
 ```handlebars
 {{! Get all tiers with monthly price, yearly price, and benefits data }}
-{{#get "tiers" include="monthly_price,yearly_price,benefits" limit="all" as |tiers|}}
+{{#get "tiers" include="monthly_price,yearly_price,benefits" limit="100" as |tiers|}}
     {{! Loop through our tiers collection }}
     {{#foreach tiers}}
         {{name}}
