--- a/themes/contexts/index-context.mdx
+++ b/themes/contexts/index-context.mdx
@@ -23,7 +23,7 @@ Note that the `index.hbs` template is also used to output the tag and author con
 
 The `index` context provides templates with access to an array of post objects and a pagination object. As with all contexts, all of the `@site` global data is also available.
 
-The number of posts provided will depend on the `post per page` setting which you can configure [in your package.json](/themes/helpers/functional/foreach/) file. The array will provide the correct posts for the current page number, with the posts ordered chronologically, newest first. Therefore on the home page, the theme will have access to the first 6 posts by default. On /page/2/ the theme will have access to posts 7-12.
+The number of posts provided will depend on the `post per page` setting which you can configure [in your package.json](/themes/structure#additional-properties) file. The array will provide the correct posts for the current page number, with the posts ordered chronologically, newest first. Therefore on the home page, the theme will have access to the first 6 posts by default. On /page/2/ the theme will have access to posts 7-12.
 
 Each of the posts can be looped through using `{{#foreach 'posts'}}{{/foreach}}`. The template code inside the block will be rendered for each post, and have access to all of the post object attributes.
 
