Updated install structure for new self-hoster docs
- This commit is just getting ready for the new self-hoster docs
  so that we have the URL
- I've kept the old docs around at /install/docker-community but I
  don't think we'll keep a link to them on the install page

--- a/install.mdx
+++ b/install.mdx
@@ -19,14 +19,14 @@ import { LocalInstallLogo } from '/snippets/local.jsx'
     href="/install/ubuntu/"
     icon={<UbuntuLogo />}
   >
-    16.04, 18.04, 20.04, 22.04 LTS
+   Ghost CLI
   </Card>
   <Card
-    title="Docker"
+    title="Docker (preview)"
     href="/install/docker/"
     icon={<DockerLogo />}
   >
-    Community image
+    Docker compose (preview)
   </Card>
   <Card
     title="Local install"
