--- a/install/docker.mdx
+++ b/install/docker.mdx
@@ -1,15 +1,10 @@
 ---
-title: "How To Install Ghost With Docker"
-description: The Docker image for Ghost is an unofficial community package maintained by people within the Ghost developer community.
+title: "How To Install Ghost With Docker (preview)"
+description: Preview our new batteries-included tools for self-hosting Ghost using Docker.
 ---
 
 ***
 
 ## Resources
 
-Resources and downloads:
-
-* **[Installation steps](https://hub.docker.com/_/ghost/)**
-* [Ghost Docker Image on GitHub](https://github.com/docker-library/ghost)
-* [Reporting issues](https://github.com/docker-library/ghost/issues)
-* [Play With Docker direct link](http://play-with-docker.com/?stack=https://raw.githubusercontent.com/docker-library/docs/e24f39cddf21560cf0a24f149059ff23640b0f16/ghost/stack.yml)
+TBC
